unpackaged/main/default/objects/ffban__Financial_Statement__c/fields/ffban__ColumnConfigurationValues__c.field-meta.xml
<CustomField>
    <fullName>ffban__ColumnConfigurationValues__c</fullName>
    <description>The last column configuration saved.</description>
    <label>Column Configuration Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>