unpackaged/main/default/objects/ffban__Financial_Statement__c/fields/ffban__Description__c.field-meta.xml
<CustomField>
    <fullName>ffban__Description__c</fullName>
    <description>The description of the financial statement.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>