unpackaged/main/default/objects/ffban__Financial_Statement__c/fields/ffban__FilterValues__c.field-meta.xml
<CustomField>
    <fullName>ffban__FilterValues__c</fullName>
    <description>The last configuration of filter values that was saved.</description>
    <label>Filter Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>