unpackaged/main/default/objects/ffban__Financial_Statement__c/fields/ffban__RowConfigurationValues__c.field-meta.xml
<CustomField>
    <fullName>ffban__RowConfigurationValues__c</fullName>
    <description>The last row configuration saved.</description>
    <label>Row Configuration Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>