unpackaged/main/default/objects/ffban__Financial_Statement__c/recordTypes/ffban__Income_Statement.recordType-meta.xml
<RecordType>
    <fullName>ffban__Income_Statement</fullName>
    <active>true</active>
    <description>Used to create an Income Statement.</description>
    <label>Income Statement</label>
</RecordType>