unpackaged/main/default/objects/ffban__Financial_Statement__c/recordTypes/ffban__Trial_Balance.recordType-meta.xml
<RecordType>
    <fullName>ffban__Trial_Balance</fullName>
    <active>true</active>
    <description>Used to create a Trial Balance.</description>
    <label>Trial Balance</label>
</RecordType>