unpackaged/main/default/objects/ffban__Financial_Statement__c/listViews/ffban__All.listView-meta.xml
<ListView>
    <fullName>ffban__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ffban__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>